--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,14 +40,12 @@ stages:
       - powershell: 
              Write-Host "##vso[task.setvariable variable=$(Version)]this is the same job"
 
-      - powershell: 
-              Write-Host $(myJobVar)
       - task: PowerShell@2
         inputs: 
          targetType: 'inline'
         # ${{ if eq( variables.Environment, 'int1' ) }}:   
          script: |
-           # echo   $(myJobVar)
+            echo   ${{variables.int1}}
             echo   $(Environment)
             echo  "$(Version)"
             $myTeamsWebHook = “https://vodafone.webhook.office.com/webhookb2/57d56a25-1bd8-43de-a333-251ee152be67@68283f3b-8487-4c86-adb3-a5228f18b893/IncomingWebhook/40060548445f42488a707b744a5c5c3d/ae86f284-3d1d-442b-8cd6-28c89bd0544f”
