Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -61,7 +61,7 @@ stages:
         condition: Failed()
 
   - job: MyJob2 
-    condition: MyJob
+    dependsOn: MyJob
     variables:
       int1Msg : $[ dependencies.MyJob.outputs['int1status.int'] ]
     steps:
