--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,7 +45,6 @@ stages:
         inputs: 
          targetType: 'inline'
          script: |
-            echo   $(Environment)
             echo  "$(Version)"
             $myTeamsWebHook = “https://vodafone.webhook.office.com/webhookb2/57d56a25-1bd8-43de-a333-251ee152be67@68283f3b-8487-4c86-adb3-a5228f18b893/IncomingWebhook/40060548445f42488a707b744a5c5c3d/ae86f284-3d1d-442b-8cd6-28c89bd0544f”
            # Invoke-RestMethod -Method post -ContentType 'Application/Json' -Body '{"text":"$(version) Test Teams is up"}' -Uri $myTeamsWebHook 
@@ -66,6 +65,11 @@ stages:
     steps:
     - powershell: |
         echo $(int1Msg)
+    - task: PowerShell@2
+      inputs:
+        targetType: 'inline'
+        script: |
+          echo $(int1Msg)
                
           
     # - ${{ if eq('Version', 'int1') }}:
