--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,8 +38,8 @@ stages:
     steps: 
       
       - powershell: 
-           Write-Host "##vso[task.setvariable variable=int;isOutput=true]this is a stage output variable"
-        name: int1status
+           Write-Host "##vso[task.setvariable variable=myOutputVar;isOutput=true]this is a stage output variable"
+        name: int1
 
       - task: PowerShell@2
         inputs: 
@@ -61,7 +61,7 @@ stages:
   - job: MyJob2 
     dependsOn: MyJob
     variables:
-      int1Msg : $(int1status.int)
+      int1Msg : $[ dependencies.MyJob.outputs['int1.myOutputVar'] ]
     steps:
     - powershell: |
         echo $(int1Msg)
