--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,8 +37,7 @@ stages:
 
     steps: 
       
-      - bash: |
-           echo "##vso[task.setvariable variable=myOutputVar;isoutput=true]this is from job A"
+      - bash: echo "##vso[task.setvariable variable=myOutputVar;isoutput=true]this is from job A"
         name: passOutput
 
       - task: PowerShell@2
@@ -63,8 +62,7 @@ stages:
     variables:
       int1Msg : $[ dependencies.MyJob.outputs['passOutput.myOutputVar'] ]
     steps:
-    - bash: |
-       echo $(int1Msg)
+    - bash: echo $(int1Msg)
     # - task: PowerShell@2
     #   inputs:
     #     targetType: 'inline'
