--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,7 +37,7 @@ stages:
 
     steps: 
       
-      - bash: echo echo "##vso[task.setvariable variable=int1]secondValue"
+      - bash: echo "##vso[task.setvariable variable=int1]secondValue"
         displayName: Set new variable value
 
       - task: PowerShell@2
