--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,6 +39,10 @@ stages:
       
       - bash: echo "##vso[task.setvariable variable=int1]secondValue"
         displayName: Set new variable value
+      
+      - script: |
+          echo ${{ variables.int1 }} # outputs initialValue
+          echo $(int1) # outputs secondValue
 
       - task: PowerShell@2
         inputs: 
