Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,11 +28,11 @@ stages:
                  Version: qcx
                  AppName: bar  
 
-    variables:
-      - name: int1
-        value: 1
-      - name: qcx
-        value: 2 
+    # variables:
+    #   - name: int1
+    #     value: 1
+    #   - name: qcx
+    #     value: 2 
 
 
     steps: 
@@ -44,7 +44,9 @@ stages:
       - script: |
           echo $(Version) # outputs secondValue
 
-          
+
+      - pwsh: |
+           Write-Host "my environment variable is $env:SAUCE"    
 
       # - task: PowerShell@2
       #   inputs: 
@@ -72,8 +74,8 @@ stages:
       inputs: 
          targetType: 'inline'
          script: |
-            echo $(int1)
-            echo $(qcx)
+            echo $int1
+            echo $qcx
             # $myTeamsWebHook = “https://vodafone.webhook.office.com/webhookb2/57d56a25-1bd8-43de-a333-251ee152be67@68283f3b-8487-4c86-adb3-a5228f18b893/IncomingWebhook/40060548445f42488a707b744a5c5c3d/ae86f284-3d1d-442b-8cd6-28c89bd0544f”
             # Invoke-RestMethod -Method post -ContentType 'Application/Json' -Body '{"text":"$(int1) `n$(qcx)"}' -Uri $myTeamsWebHook 
       condition: Succeeded()   
