--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,17 +28,18 @@ stages:
                  Version: qcx
                  AppName: bar  
 
-    # variables:
-    #   - name: int1
-    #     value: 1
-    #   - name: qcx
-    #     value: 2 
+    variables:
+      - name: int1
+        value: 1
+      - name: qcx
+        value: 2 
 
 
     steps: 
       
-      - bash: echo "##vso[task.setvariable variable="$(Version)"]$(Version) is up"
+      - bash: echo "##vso[task.setvariable variable="$(Version)";isOutput=true]$(Version) is up"
         displayName: Set new variable value
+        name: setEnv
         condition: Succeeded()
       
       - script: |
@@ -67,18 +68,18 @@ stages:
 
   - job: MyJob2 
     dependsOn: MyJob
-    # variables:
-    #   int1Msg: $[ dependencies.MyJob.outputs['passOutput.myOutputVar'] ]
+    variables:
+      int1Msg: $[ dependencies.MyJob.outputs['setEnv.int1'] ]
     steps:
     - task: PowerShell@2
       inputs: 
          targetType: 'inline'
          script: |
-            echo $int1
-            echo $qcx
+            echo $(int1Msg)        
             # $myTeamsWebHook = “https://vodafone.webhook.office.com/webhookb2/57d56a25-1bd8-43de-a333-251ee152be67@68283f3b-8487-4c86-adb3-a5228f18b893/IncomingWebhook/40060548445f42488a707b744a5c5c3d/ae86f284-3d1d-442b-8cd6-28c89bd0544f”
             # Invoke-RestMethod -Method post -ContentType 'Application/Json' -Body '{"text":"$(int1) `n$(qcx)"}' -Uri $myTeamsWebHook 
       condition: Succeeded()   
+
                
           
     # - ${{ if eq('Version', 'int1') }}:
