--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,15 +42,9 @@ stages:
         name: setEnv
         condition: Succeeded()
       
-      - script: echo $(setEnv.int1)
-        name: echovar
-      
       - script: |
           echo $(Version) # outputs secondValue
-
-
-      - pwsh: |
-           Write-Host "my environment variable is $env:SAUCE"    
+         
 
       # - task: PowerShell@2
       #   inputs: 
@@ -72,13 +66,13 @@ stages:
   - job: MyJob2 
     dependsOn: MyJob
     variables:
-      $(Version): $[ dependencies.MyJob.outputs['setEnv."$(Version)"'] ]
+      $(Version): $[ dependencies.MyJob.outputs['setEnv.$(Version)'] ]
     steps:
     - task: PowerShell@2
       inputs: 
          targetType: 'inline'
          script: |
-            echo $(int1)        
+            echo $(Version)        
             # $myTeamsWebHook = “https://vodafone.webhook.office.com/webhookb2/57d56a25-1bd8-43de-a333-251ee152be67@68283f3b-8487-4c86-adb3-a5228f18b893/IncomingWebhook/40060548445f42488a707b744a5c5c3d/ae86f284-3d1d-442b-8cd6-28c89bd0544f”
             # Invoke-RestMethod -Method post -ContentType 'Application/Json' -Body '{"text":"$(int1) `n$(qcx)"}' -Uri $myTeamsWebHook 
       condition: Succeeded()   
