--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,7 +37,7 @@ stages:
 
     steps: 
       
-      - bash: echo "##vso[task.setvariable variable="$(Version)"]$(Version) is up"
+      - bash: echo "##vso[task.setvariable variable=$(Version)]$(Version) is up"
         displayName: Set new variable value
         condition: Succeeded()
       
