Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,7 +42,7 @@ stages:
         condition: Succeeded()
       
       - script: |
-         echo ${{variables.$(Version)}} # outputs secondValue
+         echo ${{variables.int1}} # outputs secondValue
          
 
       # - task: PowerShell@2
