Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,11 +37,12 @@ stages:
 
     steps: 
       
-      - bash: echo "##vso[task.setvariable variable=$(Version)]$(Version) is up"
+      - bash: echo "##vso[task.setvariable variable=int1]$(Version) is up"
         displayName: Set new variable value
         condition: Succeeded()
       
       - script: |
+         echo $(int1)
          echo ${{variables.int1}} # outputs secondValue
          
 
