--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,12 +39,15 @@ stages:
       - bash: echo "##vso[task.setvariable variable=Environmentstatus]$(Version) is up"
         displayName: Set new variable value
         condition: Succeeded()
-            
-      - script: |
-         echo $(Environmentstatus)
-         echo ${{variables.Environmentstatus}} # outputs secondValue
-         
 
+      - ${{ if eq(Environmentstatus, 'int1') }}:     
+        - bash: |
+           echo $(Environmentstatus)
+           echo "##vso[task.setvariable variable=int1status]$(Version) is up"
+      - ${{ elseif eq(Environmentstatus, 'qcx') }}: 
+         - bash: |
+            echo $(Environmentstatus)
+            echo "##vso[task.setvariable variable=qcxstatus]$(Version) is up"
       # - task: PowerShell@2
       #   inputs: 
       #    targetType: 'inline'
