--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,6 +31,8 @@ stages:
     variables:
       - name: Environmentstatus
         value: 1
+      - name : currentEnv
+        value: $(Version) 
 
 
 
@@ -40,11 +42,11 @@ stages:
         displayName: Set new variable value
         condition: Succeeded()
 
-      - ${{ if eq(Environmentstatus, 'int1') }}:     
+      - ${{ if eq(variables.currentEnv, 'int1') }}:     
         - bash: |
            echo $(Environmentstatus)
            echo "##vso[task.setvariable variable=int1status]$(Version) is up"
-      - ${{ elseif eq(Environmentstatus, 'qcx') }}: 
+      - ${{ elseif eq(variables.currentEnv, 'qcx') }}: 
          - bash: |
             echo $(Environmentstatus)
             echo "##vso[task.setvariable variable=qcxstatus]$(Version) is up"
