--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,7 +32,7 @@ stages:
       - name: Environmentstatus
         value: 1
       - name : currentEnv
-        value: $(Version) 
+        value: int1 
 
 
 
