Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,7 +32,7 @@ stages:
       - name: Environmentstatus
         value: 1
       - name : currentEnv
-        value: int1 
+        value: $[Version] 
 
 
 
