--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,7 +37,7 @@ stages:
 
     steps: 
       
-      - ${{ if eq($(Version), 'int1') }}:
+      - ${{ if eq(variables['Environmentstatus'], 'int1') }}:
            - powershell: |
                 Write-Host "##vso[task.setvariable variable=int1;isoutput=true]$(Version) is up"
              name: passOutput
