--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,7 +29,10 @@ stages:
       - bash: echo "##vso[task.setvariable variable=myOutputVar;isOutput=true]this is the $(Version) value"
         name: setvarStep
       - bash: echo $(setvarStep.myOutputVar)
+              echo $(Agent.JobName)
+              echo $(System.JobName)
         name: echovar
+      
  
 
 
