--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ stages:
 
 
     steps: 
-      - ${{ if eq(System.JobName.Version, 'int1') }}:
+      - ${{ if eq(JobName.Version, 'int1') }}:
         - bash: echo "##vso[task.setvariable variable=myOutputVar;isOutput=true]this is the $(Version) value"
           name: setvarStep
       - bash: echo $(setvarStep.myOutputVar)
