Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,17 +24,21 @@ stages:
                  Version: qcx
                  AppName: bar  
 
+    variables: 
+      Name: $[ dependencies.MyJob.outputs['setvarStep.myOutputVar'] ]
 
     steps: 
      
       - bash: echo "##vso[task.setvariable variable=myOutputVar;isOutput=true]this is the $(Version) value"
         name: setvarStep
-        # condition: and(succeeded(), eq(variables['Version'], 'int1'))
+        condition: and(succeeded(), eq(variables['Version'], 'int1'))
 
       - bash: echo $(setvarStep.myOutputVar)
               echo $(Agent.JobName)
               echo $(System.JobName)
         name: echovar
+        
+
       
  
 
@@ -64,6 +68,7 @@ stages:
     steps:
     - bash: |
           echo $(myVarFromJobA)
+          echo $(variables.Name)
       
 
                
