Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -70,7 +70,7 @@ stages:
     steps:
     - bash: |
           echo $(myVarFromJobA)
-          echo $(variables.state)
+          echo ${{variables.state}}
       
 
                
