Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -65,10 +65,11 @@ stages:
   - job: MyJob2 
     dependsOn: MyJob
     variables:
-       myVarFromJobA: $[ dependencies.MyJob.outputs['setvarStep.myOutputVar'] ]
+       myVarFromJobA: $[ dependencies.MyJob JOB1.outputs['setvarStep.myOutputVar'] ]
        
     steps:
     - script: |
+          echo $(setvarStep.myOutputVar)
           echo $(myVarFromJobA)
           echo ${{variables.state}}
       
