--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,7 +31,8 @@ stages:
 
     steps: 
      
-      - powershell: echo "##vso[task.setvariable variable=myOutputVar;isOutput=true]this is the value"
+      - powershell: |
+           echo "##vso[task.setvariable variable=myOutputVar;isOutput=true]this is the value"
         name: setvarStep
         # condition: and(succeeded(), eq(variables['Version'], 'int1'))
 
@@ -65,7 +66,7 @@ stages:
   - job: MyJob2 
     dependsOn: MyJob
     variables:
-       myVarFromJobA: $[ dependencies.MyJob JOB1.outputs['setvarStep.myOutputVar'] ]
+       myVarFromJobA: $[ dependencies.MyJob.outputs['setvarStep.myOutputVar'] ]
        
     steps:
     - script: |
