--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ stages:
 
     # variables: 
     #   - name: state
-    #     value: $[ dependencies.MyJob.JOB1.outputs['setvarStep.myOutputVar'] ]
+    #     value: $(setvarStep.myOutputVar)
 
 
     steps: 
@@ -34,9 +34,9 @@ stages:
       - powershell: |
            echo "##vso[task.setvariable variable=myOutputVar;isOutput=true]this is the value"
         name: setvarStep
-        # condition: and(succeeded(), eq(variables['Version'], 'int1'))
+        condition: and(succeeded(), eq(variables['Version'], 'int1'))
 
-      - bash: echo $(setvarStep.myOutputVar)
+      - bash: echo $(variables.state)
               echo $(Agent.JobName)
               echo $(System.JobName)
         name: echovar
