Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,9 +24,9 @@ stages:
                  Version: qcx
                  AppName: bar  
 
-    # variables: 
-    #   - name: state
-    #     value: $(setvarStep.myOutputVar)
+    variables: 
+      - name: state
+        value: $(setvarStep.myOutputVar)
 
 
     steps: 
