--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,7 +36,7 @@ stages:
         name: setvarStep
         condition: and(succeeded(), eq(variables['Version'], 'int1'))
 
-      - bash: echo $(variables.state)
+      - bash: echo ${{variables.state}}
               echo $(Agent.JobName)
               echo $(System.JobName)
         name: echovar
