Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,6 +37,7 @@ stages:
         condition: and(succeeded(), eq(variables['Version'], 'int1'))
 
       - bash: echo ${{variables.state}}
+              echo $['variables.state']
               echo $(Agent.JobName)
               echo $(System.JobName)
         name: echovar
